--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "15.4.5",
     "next-themes": "^0.4.6",
     "openai": "^5.11.0",
+    "random-word-slugs": "^0.1.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "server-only": "^0.0.1",
