--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "openai": "^5.11.0",
     "prismjs": "^1.30.0",
     "random-word-slugs": "^0.1.7",
+    "rate-limiter-flexible": "^7.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
